# CleanFlowEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  simulate.py  smoke_test.py  validate_submission.py
Workflow/: Constraints.md  Prompts.md  SSTXMeta_Updated.md  Summary.md
cleanflow_env/: __init__.py
cleanflow_env/api/: __init__.py  dashboard.py  main.py  mcp_server.py
cleanflow_env/baseline/: __init__.py  rule_agent.py  run_baseline.py
cleanflow_env/env/: __init__.py  actions.py  budget.py  environment.py  grader.py  rewards.py  state.py  validation.py
cleanflow_env/models/: __init__.py  action.py  observation.py  reward.py
cleanflow_env/tasks/: __init__.py  task_custom.py  task_easy.py  task_expert.py  task_hard.py  task_medium.py  task_messy_contacts.py  task_multi.py
server/: app.py
tests/: test_actions.py  test_integration.py  test_models.py
