[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cleanflow-env"
version = "2.0.0"
description = "OpenEnv-compliant environment for data cleaning and ETL workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.0,<4",
    "pydantic>=2.0,<3",
    "fastapi>=0.100,<1",
    "uvicorn>=0.20,<1",
    "gradio>=4.0,<7",
    "requests>=2.28,<3",
    "httpx>=0.24,<1",
    "openai>=1.0,<3",
    "openenv-core>=0.2.0",
]

[project.scripts]
cleanflow-server = "server.app:main"

[tool.setuptools.packages.find]
include = ["cleanflow_env*"]
